# mandelbrot-wgpu

./: Cargo.toml  README.md  build.rs
src/: app.rs  fragment.rs  lib.rs  main.rs  renderer.rs  shader.frag  shader.vert  shader.wgsl  shader_double.frag  shader_double.wgsl  shaders.rs  state.rs  window.rs
