[package]
name = "mandelbrot-wgpu"
version = "0.1.0"
authors = ["Amandus Søve Thorsrud <ama.thorsrud@gmail.com>"]
edition = "2018"

[features]
default = []
double = []

[dependencies]
winit = "0.22.2"
futures = "0.3.5"
zerocopy = "0.3.0"
glsl-to-spirv = "0.1"

[dependencies.wgpu]
version = "0.5.2"
features = ["vulkan"]
