[package]
name = "mandelbrot-wgpu"
version = "0.1.0"
authors = ["Amandus Søve Thorsrud <ama.thorsrud@gmail.com>"]
edition = "2024"

[features]
double = []

[dependencies]
anyhow = "1.0"
wgpu = { version = "25.0", features = [ "vulkan", "vulkan-portability" ] }
winit = "0.30"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
